--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,14 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+	"moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+
+	"allowSyntheticDefaultImports": true,
+	"esModuleInterop": true,
 
     /* Linting */
     "strict": true,
